--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,3 +5,15 @@
 body {
   @apply bg-gray-900 text-white font-sans;
 }
+
+:root {
+  --background: #ffffff;
+  --foreground: #171717;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --background: #0a0a0a;
+    --foreground: #dedede;
+  }
+}
